objects/SAccOb1__c.object
<CustomObject>
    <description>Add Comment123</description>
    <fields>
        <fullName>Accnewfield2__c</fullName>
        <label>Accnewfield2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sf1s__c</fullName>
        <label>Sf1</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sf3o3__c</fullName>
        <label>Sf3o3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sfo1__c</fullName>
        <label>Sfo1</label>
        <type>Phone</type>
    </fields>
    <label>SAccOb1</label>
    <nameField>
        <label>SAccOb1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAccOb1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TestVal1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Sf3o3__c  )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TestVal3</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Sfo1__c )</errorConditionFormula>
        <errorMessage>Pleaase enter a value</errorMessage>
    </validationRules>
</CustomObject>